--- a/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_HydrographyMaster.R.ipynb
+++ b/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_HydrographyMaster.R.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# the cleaned file is saved as a csv in the folder \"CleanedData\""
+    "# the cleaned file is saved as a csv in the folder \"DataFiles_Processed\" for later use"
    ]
   },
   {
