updated and reworked some scripts
for the monday presentation, January 28th 2019

--- a/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_HydrographyMaster.R.ipynb
+++ b/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_HydrographyMaster.R.ipynb
@@ -64,13 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in data$Date: object of type 'closure' is not subsettable\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in data$Date: object of type 'closure' is not subsettable\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "# convert date & time into machine readable format\n",
     "data$DateString <- data$Date\n",
-    "data$Date <- as.POSIXlt(data$Date, format=\"%Y/%m/%d\")\n",
+    "data$Date <- as.POSIXct(data$Date, format=\"%Y/%m/%d\")\n",
     "\n",
     "# get \"day of the year\" as variable\n",
     "data$yday <- data$Date$yday"
