--- a/ToyModels/MasterThesisModel_OOP-edit_02_constantforcing.ipynb
+++ b/ToyModels/MasterThesisModel_OOP-edit_02_constantforcing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "code_folding": []
    },
@@ -116,13 +116,6 @@
     "# an as of yet unecessary allometry class, just as a test\n",
     "could also simply be explicit functions without class, as of now..."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -885,10 +878,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.1,\n",
+       " 0.9414709848078965,\n",
+       " 1.0092974268256818,\n",
+       " 0.24112000805986722,\n",
+       " -0.6568024953079282,\n",
+       " -0.8589242746631385,\n",
+       " -0.17941549819892585,\n",
+       " 0.756986598718789,\n",
+       " 1.0893582466233818,\n",
+       " 0.5121184852417566,\n",
+       " -0.4440211108893699,\n",
+       " -0.8999902065507035,\n",
+       " -0.43657291800043496,\n",
+       " 0.5201670368266409,\n",
+       " 1.0906073556948703,\n",
+       " 0.7502878401571169,\n",
+       " -0.1879033166650653,\n",
+       " -0.8613974918795568,\n",
+       " -0.6509872467716761,\n",
+       " 0.24987720966295235,\n",
+       " 1.0129452507276278,\n",
+       " 0.9366556385360559,\n",
+       " 0.09114869070959614,\n",
+       " -0.7462204041751707,\n",
+       " -0.8055783620066239,\n",
+       " -0.032351750097773024,\n",
+       " 0.8625584504796028,\n",
+       " 1.0563759284045031,\n",
+       " 0.370905788307869,\n",
+       " -0.5636338842129676,\n",
+       " -0.8880316240928618,\n",
+       " -0.304037645323065,\n",
+       " 0.6514266812416906,\n",
+       " 1.0999118601072673,\n",
+       " 0.6290826861200238,\n",
+       " -0.32818266949615105,\n",
+       " -0.8917788534431158,\n",
+       " -0.5435381333569994,\n",
+       " 0.39636857870938536,\n",
+       " 1.0637953862840879,\n",
+       " 0.8451131604793488,\n",
+       " -0.05862266880470898,\n",
+       " -0.8165215479156338,\n",
+       " -0.7317747426285983,\n",
+       " 0.11770192510541358,\n",
+       " 0.9509035245341184,\n",
+       " 1.0017883476488092,\n",
+       " 0.223573122745224,\n",
+       " -0.6682546613236668,\n",
+       " -0.8537526527594719,\n",
+       " -0.16237485370392876,\n",
+       " 0.7702291758433747,\n",
+       " 1.0866275920404853,\n",
+       " 0.49592515018183425,\n",
+       " -0.4587890488516162,\n",
+       " -0.8997551733586199,\n",
+       " -0.4215510020869119,\n",
+       " 0.5361647552478249,\n",
+       " 1.0928726480845372,\n",
+       " 0.7367380071391378,\n",
+       " -0.20481062110221668,\n",
+       " -0.866117770008393,\n",
+       " -0.639180696649223,\n",
+       " 0.267355700302807,\n",
+       " 1.0200260381967907,\n",
+       " 0.9268286794901035,\n",
+       " 0.07344884597603321,\n",
+       " -0.7555199789753223,\n",
+       " -0.7979276806892913,\n",
+       " -0.014784813783187217,\n",
+       " 0.8738906815578891,\n",
+       " 1.0510546532543747,\n",
+       " 0.3538233627620363,\n",
+       " -0.5767719568873076,\n",
+       " -0.8851462604682474,\n",
+       " -0.28778163540943047,\n",
+       " 0.6661076368981803,\n",
+       " 1.0995201585807313,\n",
+       " 0.6139784559875352,\n",
+       " -0.34411266870750834,\n",
+       " -0.8938886539233752,\n",
+       " -0.529887994274454,\n",
+       " 0.41322878243308514,\n",
+       " 1.0683644611001855,\n",
+       " 0.8331903200732921,\n",
+       " -0.07607561994858708,\n",
+       " -0.8234584470040598,\n",
+       " -0.7218178366308226,\n",
+       " 0.13539830273366069,\n",
+       " 0.9600694058124533,\n",
+       " 0.9939966636005578,\n",
+       " 0.20598751175115687,\n",
+       " -0.6794660696158047,\n",
+       " -0.8482821412699473,\n",
+       " -0.1452519854676543,\n",
+       " 0.7832617147361209,\n",
+       " 1.083587745434345,\n",
+       " 0.47960773902752163,\n",
+       " -0.4733818719904229,\n",
+       " -0.8992068341863537]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1 * (np.sin(i)+0.1) for i in range(100)]"
+   ]
   },
   {
    "cell_type": "code",
