--- a/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_ZooplanktonMaster.R.ipynb
+++ b/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_ZooplanktonMaster.R.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read Hydrography Master (June 2018) file\n",
+    "# Read Zooplankton Master (Nov 2017) file\n",
     "\n",
-    "this R notebook reads (and cleans up) the Hydrography Master (June 2018) file that is provided on  \n",
+    "this R notebook reads (and cleans up) the Zooplankton Master (Nov 2017) file that is provided on  \n",
     "  \n",
     "http://imars.marine.usf.edu/cariaco  \n",
     "\n",
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# read header\n",
-    "file <- \"../../DataFiles_Raw/Master_Hydrography_June2018.csv\"\n",
+    "file <- \"../../DataFiles_Raw/Zooplankton_Master_revised_2017Nov22.csv\"\n",
     "header <- read.csv(file, header = F, nrows = 1, as.is=T)\n",
     "\n",
     "# skip empty rows & read data\n",
@@ -45,14 +45,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert \"-9999\" values to NA\n",
-    "data[data == -9999] <- NA\n",
-    "\n",
     "# remove empty columns\n",
-    "data <- data[,c(-1,-49:-50)]\n",
+    "data <- data[,c(-1:-2,-63:-76)]\n",
     "\n",
     "# remove rows full of NAs (i.e. where cruise number is NA)\n",
-    "data <- data[!is.na(data$Cruise),]"
+    "data <- data[!is.na(data$CRUISE),]"
    ]
   },
   {
@@ -63,17 +60,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "read Hydrography Master, and extract precise date for each cruise from there:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert date & time into machine readable format\n",
-    "data$DateString <- data$Date\n",
-    "data$Date <- as.POSIXlt(data$Date, format=\"%Y/%m/%d\")\n",
+    "# read processed hydrography master\n",
+    "phm <- read.csv(\"../../DataFiles_Processed/Master_Hydrography_June2018_Cleaned.csv\")\n",
     "\n",
+    "# trim data frame to needed columns\n",
+    "phmdate <- data.frame(phm$Cruise,phm$Date)\n",
+    "names(phmdate) <- c('CRUISE','Date')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "merge two dataframes by cruise number:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data <- merge(phmdate, data, by=\"CRUISE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data$Date <- as.POSIXlt(data$Date, format=\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get \"day of the year\" as variable\n",
-    "data$yday <- data$Date$yday"
+    "data$yday <- data$Date$yday # Note: yday starts at 0 in POSIX format!"
    ]
   },
   {
@@ -85,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write CSV in R\n",
-    "write.csv(data, file = \"../../DataFiles_Processed/Master_Hydrography_June2018_Cleaned.csv\")"
+    "write.csv(data, file = \"../../DataFiles_Processed/Master_Zooplankton_Nov2017_Cleaned.csv\")"
    ]
   }
  ],
