ToyModel #1 + Zooplankton Data
- first toy model is up and running
- zooplankton model verification data was added

--- a/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_ZooplanktonMaster.R.ipynb
+++ b/CARIACOModelingProject/Data/DataAnalysisScripts/AggregatedYearlyForcings/Read_ZooplanktonMaster.R.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data <- merge(phmdate, data, by=\"CRUISE\")"
+    "data_m <- merge(phmdate, data, by=\"CRUISE\")"
    ]
   },
   {
@@ -102,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data$Date <- as.POSIXlt(data$Date, format=\"%Y-%m-%d\")"
+    "# remove duplicate rows due to merging: (#perhaps there is a better fix here)\n",
+    "data_m <- data_m[!duplicated(data_m), ]"
    ]
   },
   {
@@ -111,8 +112,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_m$Date <- as.POSIXlt(data_m$Date, format=\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get \"day of the year\" as variable\n",
-    "data$yday <- data$Date$yday # Note: yday starts at 0 in POSIX format!"
+    "data_m$yday <- data_m$Date$yday # Note: yday starts at 0 in POSIX format!"
    ]
   },
   {
@@ -124,13 +134,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write CSV in R\n",
-    "write.csv(data, file = \"../../DataFiles_Processed/Master_Zooplankton_Nov2017_Cleaned.csv\")"
+    "write.csv(data_m, file = \"../../DataFiles_Processed/Master_Zooplankton_Nov2017_Cleaned.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
