--- a/ToyModels/BennyPhD_ToyModel_01.ipynb
+++ b/ToyModels/BennyPhD_ToyModel_01.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -282,12 +282,21 @@
     "\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#titles on the side!\n",
+    "#labels as big as possible\n",
+    "#more numbers on axis (major ticks + minor ticks)\n",
+    "#lines thicker\n",
+    "#plot original data with interpolation (scattered raw data (or average +- bars, standard errors)), perhaps boxplots or cut off top\n",
+    "#put letters size all the same\n",
+    "# put NO2+NO3 instead of N, for all chemicals\n",
+    "# start on origin, no gaps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +305,7 @@
        "-0.04251635735343733"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,12 +318,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "piecewise polynomial, pwpoly()\n",
+    "  \n",
+    "set interpolation to only interpolate within range\n",
+    "\n",
+    "do different interpolation, so forcing is above 0\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## plot mixing processes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +355,9 @@
     "firstderiv_MLD = firstderivspl(MLD, t_forcingplot, k=kmld, s=smld)\n",
     "\n",
     "diffMixing = (kappa_plot + np.max(firstderiv_MLD, 0)) / forcing_MLD\n",
-    "activeMixing = firstderiv_MLD / forcing_MLD\n",
+    "# entrainment and detrainment, think about that!\n",
+    "# Evans & Parslow!\n",
+    "activeMixing = firstderiv_MLD / forcing_MLD # don't call it active!\n",
     "\n",
     "fig2, (fx1, fx2, fx3, fx4) = plt.subplots(4, 1, sharex='col', sharey='row')\n",
     "\n",
@@ -377,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 12,
    "metadata": {
     "code_folding": []
    },
@@ -547,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +616,7 @@
      "output_type": "stream",
      "text": [
       "starting integration\n",
-      "finished after 4.393 sec\n"
+      "finished after 4.076 sec\n"
      ]
     }
    ],
@@ -608,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {
     "code_folding": []
    },
@@ -620,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 17,
    "metadata": {
     "code_folding": []
    },
@@ -660,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 18,
    "metadata": {
     "code_folding": [
      0
@@ -679,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 19,
    "metadata": {
     "code_folding": []
    },
@@ -785,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
