--- a/ToyModels/MasterThesisModel_OOP-edit_02_constantforcing.ipynb
+++ b/ToyModels/MasterThesisModel_OOP-edit_02_constantforcing.ipynb
@@ -69,9 +69,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -1019,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
