Setting up the PhytoMFTM package
I want to restructure the jupyter notebook code into a proper package for all further coding and experiments

--- a/ToyModels/BennyPhD_ToyModel_02_2P2Z_modelcomparison.ipynb
+++ b/ToyModels/BennyPhD_ToyModel_02_2P2Z_modelcomparison.ipynb
@@ -571,9 +571,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -604,9 +602,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
