working on the Tests and refining ModelCode

--- a/ToyModels/PhytoSFDM_ToyModel_MondayPres_01.ipynb
+++ b/ToyModels/PhytoSFDM_ToyModel_MondayPres_01.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "code_folding": []
    },
@@ -294,13 +294,14 @@
     "        dxdt[3 + NoMtypeSi + 1 + i] = Pno * (GainsNo - Losses)\n",
     "        \n",
     "    dxdt[3+NoMtypeSi] = Mineralization + SiMixing\n",
+    "    dxdt[3+NoMtypeSi+1+NoMtypeNo+1] = 1\n",
     "    \n",
     "    return dxdt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "code_folding": []
    },
@@ -316,7 +317,8 @@
     "NoMtypeSi = 5  # number of Morphotypes for the full model\n",
     "NoMtypeNo = 5  # number of Morphotypes for the full model\n",
     "\n",
-    "initcondSiNo = np.concatenate(([N0], [Z0], [D0], [PSi0] * NoMtypeSi, [Si0], [PNo0] * NoMtypeNo), 0)\n",
+    "initcondSiNo = np.concatenate(([N0], [Z0], [D0], [PSi0] * NoMtypeSi, [Si0], \n",
+    "                               [PNo0] * NoMtypeNo, [0]*5))\n",
     "timedays_model = np.arange(0., 5 * 365., 1.0)\n",
     "\n",
     "sizeminSi = 0.2  # Minimum size of the phytoplankton community (micro m ESD)\n",
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +347,7 @@
      "output_type": "stream",
      "text": [
       "starting integration\n",
-      "finished after 100.824 sec\n"
+      "finished after 132.404 sec\n"
      ]
     }
    ],
@@ -356,6 +358,32 @@
     "outarraySiNo_Full = odeint(fullmodelSiNo, initcondSiNo, timedays_model)#, rtol=1e-12, atol=1e-12)\n",
     "tos1 = time.time()\n",
     "print('finished after %4.3f sec'%(tos1-tos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.000e+00, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "       [1.000e+00, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "       [2.000e+00, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "       ...,\n",
+       "       [1.822e+03, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "       [1.823e+03, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "       [1.824e+03, 0.000e+00, 0.000e+00, 0.000e+00]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outarraySiNo_Full[:,15:19]"
    ]
   },
   {
@@ -644,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
