--- a/CaRiaco/RegimeShiftNotebooks/Phyto_Abundance_analysis.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/Phyto_Abundance_analysis.R.ipynb
@@ -74,6 +74,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to file for plotting in other notebooks:\n",
+    "# Write CSV in R\n",
+    "write.csv(dp_filtered, file = \"DATA_processed/PhytoAbund_filtered.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -494,6 +505,13 @@
     "ggplot(dpR1_monthly) + geom_point(aes(x=month, y=sd, col=group),shape=1)+#scale_y_log10() + \n",
     "  facet_grid(group ~ .,scales=\"free_y\") + scale_y_continuous(limits=c(0,max(dpR1_monthly$sd))) + \n",
     "  geom_point(data = dpR2_monthly,aes(x=month, y=sd, col=group),shape=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# same plot with coefficient of variability"
    ]
   },
   {
