--- a/CaRiaco/RegimeShiftNotebooks/Read_NiskinBottle_ncdf.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/Read_NiskinBottle_ncdf.R.ipynb
@@ -15,9 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: dplyr\n",
+      "Loading required package: cowplot\n",
+      "Loading required package: ggplot2\n",
+      "Loading required package: chron\n",
+      "Loading required package: ncdf4\n"
+     ]
+    }
+   ],
    "source": [
     "require(dplyr, warn.conflicts = FALSE);\n",
     "#require(ggplot2);\n",
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -331,6 +343,42 @@
     "Chl[Chl<0] <- NA\n",
     "Phaeo[Phaeo<0] <- NA\n",
     "\n",
+    "Depth_target[Depth_target>10e30] <- NA\n",
+    "Depth_real[Depth_real>10e30] <- NA\n",
+    "O2_ml_L[O2_ml_L>10e30] <- NA\n",
+    "O2_umol_kg[O2_umol_kg>10e30] <- NA\n",
+    "SiOH4_Cumana[SiOH4_Cumana>10e30] <- NA\n",
+    "NO3_Cumana[NO3_Cumana>10e30] <- NA\n",
+    "NH4[NH4>10e30] <- NA\n",
+    "NO2[NO2>10e30] <- NA\n",
+    "NO3_NO2[NO3_NO2>10e30] <- NA\n",
+    "PO4[PO4>10e30] <- NA\n",
+    "SiOH4[SiOH4>10e30] <- NA\n",
+    "pH[pH>10e30] <- NA\n",
+    "Alkalinity[Alkalinity>10e30] <- NA\n",
+    "TCO2[TCO2>10e30] <- NA\n",
+    "fCO2[fCO2>10e30] <- NA\n",
+    "sal_bot[sal_bot>10e30] <- NA\n",
+    "sal_bot_corr[sal_bot_corr>10e30] <- NA\n",
+    "sal_ctd[sal_ctd>10e30] <- NA\n",
+    "Temp[Temp>10e30] <- NA\n",
+    "Sigma_t[Sigma_t>10e30] <- NA\n",
+    "TPP[TPP>10e30] <- NA\n",
+    "PIP[PIP>10e30] <- NA\n",
+    "POC_ug_L[POC_ug_L>10e30] <- NA\n",
+    "PON_ug_L[PON_ug_L>10e30] <- NA\n",
+    "CtoN_part[CtoN_part>10e30] <- NA\n",
+    "POC_ug_kg[POC_ug_kg>10e30] <- NA\n",
+    "PON_ug_kg[PON_ug_kg>10e30] <- NA\n",
+    "DON_USF_uM[DON_USF_uM>10e30] <- NA\n",
+    "DOP_USF_uM[DOP_USF_uM>10e30] <- NA\n",
+    "DOC[DOC>10e30] <- NA\n",
+    "TOC[TOC>10e30] <- NA\n",
+    "PriPro[PriPro>10e30] <- NA\n",
+    "Chl[Chl>10e30] <- NA\n",
+    "Phaeo[Phaeo>10e30] <- NA\n",
+    "\n",
+    "\n",
     "# create data.frame (without NAs)\n",
     "NiskinDat <- data.frame(Cruise_ID,Leg,lon,lat,Date,Day,days,Month,Year,Depth_target,Depth_real,\n",
     "    O2_ml_L,O2_ml_L_Q,O2_umol_kg,O2_umol_kg_Q,SiOH4_Cumana,SiOH4_Cumana_Q,\n",
@@ -347,13 +395,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "159.73"
+      ],
+      "text/latex": [
+       "159.73"
+      ],
+      "text/markdown": [
+       "159.73"
+      ],
+      "text/plain": [
+       "[1] 159.73"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "max(NiskinDat$SiOH4_Cumana[!is.na(NiskinDat$SiOH4_Cumana)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write CSV in R\n",
     "write.csv( NiskinDat, file = \"DATA_processed/Niskin_bottle_processed.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
