smaller edits, deleted dash heroku template and app folder
go

--- a/CaRiaco/RegimeShiftNotebooks/MLD_ConcBelowMLD.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/MLD_ConcBelowMLD.R.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: dplyr\n",
+      "Loading required package: cowplot\n",
+      "Loading required package: ggplot2\n"
+     ]
+    }
+   ],
    "source": [
     "require(dplyr, warn.conflicts = FALSE)\n",
     "require(cowplot, warn.conflicts = FALSE)"
@@ -28,7 +38,68 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>X.1</th><th scope=col>X</th><th scope=col>CruiseID</th><th scope=col>Date</th><th scope=col>month</th><th scope=col>days</th><th scope=col>press</th><th scope=col>lat</th><th scope=col>lon</th><th scope=col>sigma_t</th><th scope=col>sigma_0</th><th scope=col>potemp</th><th scope=col>sal</th><th scope=col>temp</th><th scope=col>beam_att</th><th scope=col>beam_cp</th><th scope=col>fluor_chla</th><th scope=col>belowmld</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1         </td><td>  12      </td><td>93HG_001  </td><td>1995-11-08</td><td>11        </td><td>311       </td><td>24.138    </td><td>10.5      </td><td>-64.67    </td><td>23.982    </td><td>23.984    </td><td>26.711    </td><td>36.663    </td><td>26.717    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>TRUE      </td></tr>\n",
+       "\t<tr><td>2         </td><td> 638      </td><td>93HG_002  </td><td>1995-12-13</td><td>12        </td><td>346       </td><td>18.103    </td><td>10.5      </td><td>-64.67    </td><td>24.712    </td><td>24.684    </td><td>25.330    </td><td>36.906    </td><td>25.334    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>TRUE      </td></tr>\n",
+       "\t<tr><td>3         </td><td>1240      </td><td>93HG_003  </td><td>1996-01-12</td><td> 1        </td><td> 11       </td><td>28.162    </td><td>10.5      </td><td>-64.67    </td><td>25.174    </td><td>25.175    </td><td>23.727    </td><td>36.913    </td><td>23.733    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>TRUE      </td></tr>\n",
+       "\t<tr><td>4         </td><td>1813      </td><td>93HG_004  </td><td>1996-02-13</td><td> 2        </td><td> 43       </td><td>24.138    </td><td>10.5      </td><td>-64.67    </td><td>25.348    </td><td>25.350    </td><td>23.206    </td><td>36.943    </td><td>23.211    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>TRUE      </td></tr>\n",
+       "\t<tr><td>5         </td><td>2437      </td><td>93HG_005  </td><td>1996-03-13</td><td> 3        </td><td> 72       </td><td>14.080    </td><td>10.5      </td><td>-64.67    </td><td>25.609    </td><td>25.610    </td><td>22.113    </td><td>36.873    </td><td>22.116    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>TRUE      </td></tr>\n",
+       "\t<tr><td>6         </td><td>3741      </td><td>93HG_006  </td><td>1996-04-16</td><td> 4        </td><td>106       </td><td>10.057    </td><td>10.5      </td><td>-64.67    </td><td>25.578    </td><td>25.579    </td><td>22.343    </td><td>36.893    </td><td>22.345    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>TRUE      </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llllllllllllllllll}\n",
+       " X.1 & X & CruiseID & Date & month & days & press & lat & lon & sigma\\_t & sigma\\_0 & potemp & sal & temp & beam\\_att & beam\\_cp & fluor\\_chla & belowmld\\\\\n",
+       "\\hline\n",
+       "\t 1          &   12       & 93HG\\_001 & 1995-11-08 & 11         & 311        & 24.138     & 10.5       & -64.67     & 23.982     & 23.984     & 26.711     & 36.663     & 26.717     & NA         & NA         & NA         & TRUE      \\\\\n",
+       "\t 2          &  638       & 93HG\\_002 & 1995-12-13 & 12         & 346        & 18.103     & 10.5       & -64.67     & 24.712     & 24.684     & 25.330     & 36.906     & 25.334     & NA         & NA         & NA         & TRUE      \\\\\n",
+       "\t 3          & 1240       & 93HG\\_003 & 1996-01-12 &  1         &  11        & 28.162     & 10.5       & -64.67     & 25.174     & 25.175     & 23.727     & 36.913     & 23.733     & NA         & NA         & NA         & TRUE      \\\\\n",
+       "\t 4          & 1813       & 93HG\\_004 & 1996-02-13 &  2         &  43        & 24.138     & 10.5       & -64.67     & 25.348     & 25.350     & 23.206     & 36.943     & 23.211     & NA         & NA         & NA         & TRUE      \\\\\n",
+       "\t 5          & 2437       & 93HG\\_005 & 1996-03-13 &  3         &  72        & 14.080     & 10.5       & -64.67     & 25.609     & 25.610     & 22.113     & 36.873     & 22.116     & NA         & NA         & NA         & TRUE      \\\\\n",
+       "\t 6          & 3741       & 93HG\\_006 & 1996-04-16 &  4         & 106        & 10.057     & 10.5       & -64.67     & 25.578     & 25.579     & 22.343     & 36.893     & 22.345     & NA         & NA         & NA         & TRUE      \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "X.1 | X | CruiseID | Date | month | days | press | lat | lon | sigma_t | sigma_0 | potemp | sal | temp | beam_att | beam_cp | fluor_chla | belowmld | \n",
+       "|---|---|---|---|---|---|\n",
+       "| 1          |   12       | 93HG_001   | 1995-11-08 | 11         | 311        | 24.138     | 10.5       | -64.67     | 23.982     | 23.984     | 26.711     | 36.663     | 26.717     | NA         | NA         | NA         | TRUE       | \n",
+       "| 2          |  638       | 93HG_002   | 1995-12-13 | 12         | 346        | 18.103     | 10.5       | -64.67     | 24.712     | 24.684     | 25.330     | 36.906     | 25.334     | NA         | NA         | NA         | TRUE       | \n",
+       "| 3          | 1240       | 93HG_003   | 1996-01-12 |  1         |  11        | 28.162     | 10.5       | -64.67     | 25.174     | 25.175     | 23.727     | 36.913     | 23.733     | NA         | NA         | NA         | TRUE       | \n",
+       "| 4          | 1813       | 93HG_004   | 1996-02-13 |  2         |  43        | 24.138     | 10.5       | -64.67     | 25.348     | 25.350     | 23.206     | 36.943     | 23.211     | NA         | NA         | NA         | TRUE       | \n",
+       "| 5          | 2437       | 93HG_005   | 1996-03-13 |  3         |  72        | 14.080     | 10.5       | -64.67     | 25.609     | 25.610     | 22.113     | 36.873     | 22.116     | NA         | NA         | NA         | TRUE       | \n",
+       "| 6          | 3741       | 93HG_006   | 1996-04-16 |  4         | 106        | 10.057     | 10.5       | -64.67     | 25.578     | 25.579     | 22.343     | 36.893     | 22.345     | NA         | NA         | NA         | TRUE       | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  X.1 X    CruiseID Date       month days press  lat  lon    sigma_t sigma_0\n",
+       "1 1     12 93HG_001 1995-11-08 11    311  24.138 10.5 -64.67 23.982  23.984 \n",
+       "2 2    638 93HG_002 1995-12-13 12    346  18.103 10.5 -64.67 24.712  24.684 \n",
+       "3 3   1240 93HG_003 1996-01-12  1     11  28.162 10.5 -64.67 25.174  25.175 \n",
+       "4 4   1813 93HG_004 1996-02-13  2     43  24.138 10.5 -64.67 25.348  25.350 \n",
+       "5 5   2437 93HG_005 1996-03-13  3     72  14.080 10.5 -64.67 25.609  25.610 \n",
+       "6 6   3741 93HG_006 1996-04-16  4    106  10.057 10.5 -64.67 25.578  25.579 \n",
+       "  potemp sal    temp   beam_att beam_cp fluor_chla belowmld\n",
+       "1 26.711 36.663 26.717 NA       NA      NA         TRUE    \n",
+       "2 25.330 36.906 25.334 NA       NA      NA         TRUE    \n",
+       "3 23.727 36.913 23.733 NA       NA      NA         TRUE    \n",
+       "4 23.206 36.943 23.211 NA       NA      NA         TRUE    \n",
+       "5 22.113 36.873 22.116 NA       NA      NA         TRUE    \n",
+       "6 22.343 36.893 22.345 NA       NA      NA         TRUE    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# read MLD depth file\n",
     "mld_depth <- read.csv(\"DATA_processed/MLD_depth_calculated.csv\")\n",
