Finalizing Model Forcing with new MLD data
completely reworked the model forcing using new data

--- a/CaRiaco/RegimeShiftNotebooks/Read_CTDdat_ncdf.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/Read_CTDdat_ncdf.R.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +186,16 @@
     "beam_cp[beam_cp<0] <- NA\n",
     "fluor_chla[fluor_chla<0] <- NA\n",
     "\n",
+    "press[press>1e30] <- NA\n",
+    "sigma_t[sigma_t>1e30] <- NA\n",
+    "sigma_0[sigma_0>1e30] <- NA\n",
+    "potemp[potemp>1e30] <- NA\n",
+    "sal[sal>1e30] <- NA\n",
+    "temp[temp>1e30] <- NA\n",
+    "beam_att[beam_att>1e30] <- NA\n",
+    "beam_cp[beam_cp>1e30] <- NA\n",
+    "fluor_chla[fluor_chla>1e30] <- NA\n",
+    "\n",
     "# create data.frame (without NAs)\n",
     "CTDdat <- data.frame(CruiseID,Date,month,days,press,depth,lat,lon,sigma_t,sigma_0,potemp,sal,temp,beam_att,beam_cp,fluor_chla)\n",
     "head(CTDdat)"
@@ -193,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -263,13 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write CSV in R\n",
     "write.csv(CTDdat, file = \"DATA_processed/CTDdat_processed.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
