--- a/CaRiaco/RegimeShiftNotebooks/Read_SeaWIFs_8day_PAR.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/Read_SeaWIFs_8day_PAR.R.ipynb
@@ -27,6 +27,24 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -86,10 +104,14 @@
     "rm(list = ls())\n",
     "\n",
     "# set the study area\n",
-    "latmax <- 10.6\n",
-    "latmin <- 10.4\n",
-    "lonmax <- -64.75\n",
-    "lonmin <- -65.6\n",
+    "latmax <- 10.78\n",
+    "latmin <- 10.35\n",
+    "lonmax <- -64.53\n",
+    "lonmin <- -64.9\n",
+    "\n",
+    "\n",
+    "lat = c(10.35,  10.78, 10.78, 10.35)\n",
+    "lon = c(-64.53,-64.53,-64.9, -64.9)\n",
     "\n",
     "# latmax <- 10.8\n",
     "# latmin <- 10.5\n",
