--- a/CARIACOModelingProject/Design/LaTeX/SystemOfEquations.tex
+++ b/CARIACOModelingProject/Design/LaTeX/SystemOfEquations.tex
@@ -43,50 +43,53 @@
 The ecosystem model equations are similar to those used in Acevedo-Trejos et al. (2016).
 Most significant changes are that multiple phytoplankton and zooplankton functional types have been added, and that the grazing formulation was expanded to include preferential feeding on certain functional types.
 
-Nitrogen $N$ (and Silicate $Si$ for Diatoms) is assimilated by the phytoplankton types $P_i$, which are grazed by several zooplankton types $Z_j$. Mortality of and excretion from plankton, and sloppy feeding by zooplankton contribute to a Detritus $D$. The phytoplankton types include Nanoflagellates $P_{n}$, Diatoms $P_{dt}$, Coccolithophorse, $P_{c}$ and Dinoflagellates $P_{dn}$. There are two Zooplankton types split by size class, named Mikrozooplankton $Z_{\mu}$ and Mesozooplankton $Z_{\lambda}$.
+Nitrogen $N$ (and Silicate $Si$ for Diatoms) is assimilated by the phytoplankton types $P_i$, which are grazed by several zooplankton types $Z_j$. Mortality of and excretion from plankton, and sloppy feeding by zooplankton contribute to Detritus $D$. The phytoplankton types include Nanoflagellates $P_{n}$, Diatoms $P_{dt}$, Coccolithophorse, $P_{c}$ and Dinoflagellates $P_{dn}$. There are two Zooplankton types split by size class, named Mikrozooplankton $Z_{\mu}$ and Mesozooplankton $Z_{\lambda}$.
 
 ToDo:  
 Highlight in the equations how grazing works, selective feeding, explain difference in $R_j$ between zooplankton types
 
 \begin{eqnarray}
 \frac{\partial N}{\partial t} & = & 
-K \cdot \left(N_{0} - N\right) + D \cdot \delta^{N}_{D} -\sum_{i=1}^{n_p} [\mu_i \cdot U_{i}(N_0,Si_0)\cdot L_i(PAR)\cdot T_i(SST) \cdot P_{i}] 
+K \cdot \left(N_{0} - N\right) + 
+\delta^{N}_{D} \cdot D -
+\sum_{i=1}^{n_P} [\mu_i \cdot U_{i}(N_0,Si_0)\cdot L_i(PAR)\cdot T_i(SST) \cdot P_{i}] 
 \nonumber  \\
 \frac{\partial Si}{\partial t} & = & 
 K \cdot \left(Si_{0} - Si\right) 
 - \mu_{dt} \cdot U_{dt}(N_0,Si_0) \cdot L_{dt}(PAR)\cdot T_{dt}(SST) \cdot P_{dt}
 \nonumber \\
 \frac{\partial P_{i}}{\partial t} & = & 
-\mu_{dt} \cdot U_{dt}(N_0,Si_0)\cdot L_{dt}(PAR)\cdot T_{dt}(SST) \cdot P_{dt}
-- m_{dt} \cdot P_{dt}
-- \sum_{j} [I^{tot}_j \frac{p_{dt,j} \cdot P_{dt}} {R_{j}} Z_{j}]
-\nonumber \\
+\mu_{i} \cdot U_{i}(N_0,Si_0)\cdot L_{i}(PAR)\cdot T_{i}(SST) \cdot P_{i}
+- m_{i} \cdot P_{i}
+- \sum_{j=1}^{n_Z} [I^{tot}_j \frac{p^i_{j} \cdot P_{i}} {R_{j}} Z_{j}]
 \nonumber \\
 \frac{\partial Z_{\mu}}{\partial t} & = & 
 \delta_Z \cdot I^{tot}_{\mu} \cdot Z_{\mu}-
+\mu^{}_{\lambda} \frac{Z_{\mu}}{Z_{\mu}+k_{\lambda}} Z_{\lambda}-
 K_{Z} \cdot Z_{\mu} -
 m_{\mu} \cdot Z_{\mu} - 
 g_{\mu} \cdot Z_{\mu}^{2}
 \nonumber \\
 \frac{\partial Z_{\lambda}}{\partial t} & = & 
 \delta_Z \cdot I^{tot}_{\lambda} \cdot Z_{\lambda}+
-I^{\mu}_{\lambda}*Z_{\mu}-
+\delta_{\lambda} \cdot \mu^{}_{\lambda} \frac{Z_{\mu}}{Z_{\mu}+k_{\lambda}} Z_{\lambda}-
 K_{Z} \cdot Z_{\lambda} -
 m_{\lambda} \cdot Z_{\lambda} - 
 g_{\lambda} \cdot Z_{\lambda}^{2}
 \nonumber \\
 \frac{\partial D}{\partial t} & = & 
-\sum_{j} [(1-\delta_Z) I^{tot}_j \cdot Z_{j}] +
-\sum_{j} [m_j \cdot Z_{j}] +
-\sum_{i} [m_i \cdot P_{i}] -
+\sum_{j=1}^{n_Z} [(1-\delta_Z) I^{tot}_j \cdot Z_{j}] +
+(1-\delta_{\lambda}) \cdot \mu^{}_{\lambda} \frac{Z_{\mu}}{Z_{\mu}+k_{\lambda}} Z_{\lambda}-
+\sum_{j=1}^{n_Z} [m_j \cdot Z_{j}] +
+\sum_{i=1}^{n_P} [m_i \cdot P_{i}] -
 K \cdot D -
-D \cdot \delta^{N}_{D}
+\delta^{N}_{D} \cdot D
 \nonumber
 \end{eqnarray}
-
+ 
 where:\\
-\mbox{} \hspace{.5cm} $N_0=$ Nitrogen concentration below below mixed layer [$\mu M$],\\
-\mbox{} \hspace{.5cm} $N=$ Integrated nitrogen concentration above mixed layer [$\mu M$],\\
+\mbox{} \hspace{.5cm} $N_0=$ Nitrogen concentration right below mixed layer [$\mu M$],\\
+\mbox{} \hspace{.5cm} $N=$ Nitrogen concentration above mixed layer [$\mu M$],\\
 \mbox{} \hspace{.5cm} $K = \frac{1}{M(t)} \cdot \left(h^{+}(t) + \kappa\right)$ Constant that parameterizes diffusive mixing across the thermocline, \\
 \mbox{} \hspace{.5cm} $h^{+}(t) = \max\left(0, \frac{d}{d t} M(t)\right)$ Function that describes entrainment and detrainment of material,\\
 \mbox{} \hspace{.5cm} $\delta^N_D=$ Remineralization rate of nitrogen component of detritus $D$ [$\mu M d^{-1}$],\\
@@ -99,16 +102,22 @@ where:\\
 \mbox{} \hspace{.5cm} $T_i= e^{0.063 \cdot SST}$ Temperature dependence of phytoplankton $i$,\\
 
 \mbox{} \hspace{.5cm} $P_i=$ Biomass of phytoplankton type $i$ [$\mu M N$],\\
-\mbox{} \hspace{.5cm} $m_i=$ Mortality/Excretion rate for phytoplankton type $i$,\\
+\mbox{} \hspace{.5cm} $m_i=$ Mortality/excretion rate for phytoplankton type $i$,\\
 
-\mbox{} \hspace{.5cm} $I^{tot}_j= \mu^{Z}_j⋅\frac{R_{j}}{R_{j} + k_{Z}}$ Total intake XXX $i$,\\
-\mbox{} \hspace{.5cm} $R_{j}= \sum_{i} (p_{i j}⋅P_{i})$ Total intake XXX $i$,\\
+\mbox{} \hspace{.5cm} $I^{tot}_j= \mu^{Z}_j⋅\frac{R_{j}}{R_{j} + k^Z_j}$ Total intake of zooplankton type $j$,\\
+\mbox{} \hspace{.5cm} $k^Z_j =$ Half saturation constant of zooplankton type $j$,\\
+\mbox{} \hspace{.5cm} $R_{j}= \sum_{i} (p_{i j}⋅P_{i})$ Total ressource density of zooplankton type $j$,\\
+\mbox{} \hspace{.5cm} $p^i_{j}=$ Feeding preference of zooplankton type $j$ feeding on phytoplankton type $i$,\\
+\mbox{} \hspace{.5cm} $R_{\mu}= p^n_{\mu}⋅P_{n} + p^{dn}_{\mu}⋅P_{dn} + p^c_{\mu}⋅P_{c}$ Total ressource density of Mikrozooplankton $Z_{\mu}$,\\
+\mbox{} \hspace{.5cm} $R_{\lambda}= p^{dt}_{\lambda}⋅P_{dt} + p^{dn}_{\lambda}⋅P_{dn} + p^c_{\lambda}⋅P_{c}$ Total ressource density of Mesozooplankton $Z_{\lambda}$,\\
+
+
 
 \mbox{} \hspace{.5cm} $Z_j=$ Biomass of zooplankton type $j$ [$\mu M N$],\\
 \mbox{} \hspace{.5cm} $\delta_{Z}=$ Grazing efficiency of zooplankton on phytoplankton (represents sloppy feeding), \\
 \mbox{} \hspace{.5cm} $K_{Z}=\frac{1}{M(t)} \cdot \frac{d}{d t} M(t)$ Mixing term of zooplankton, \\
 \mbox{} \hspace{.5cm} $g_{i}=$ Higher order predation on zooplankton (quadratic), \\
-\mbox{} \hspace{.5cm} $m_{j}=$ Mortality/Excretion rate for zooplankton type $j$,\\
+\mbox{} \hspace{.5cm} $m_{j}=$ Mortality/excretion rate for zooplankton type $j$,\\
 
 
 
