rework Model Verification Data and Scripts

--- a/CaRiaco/RegimeShiftNotebooks/Read_NiskinBottle_ncdf.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/Read_NiskinBottle_ncdf.R.ipynb
@@ -242,6 +242,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -419,6 +426,105 @@
    ],
    "source": [
     "max(NiskinDat$SiOH4_Cumana[!is.na(NiskinDat$SiOH4_Cumana)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'0.06'</li>\n",
+       "\t<li>'1.05'</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>'10.50'</li>\n",
+       "\t<li>'10.80'</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>NA</li>\n",
+       "\t<li>'0.54'</li>\n",
+       "\t<li>'0.03'</li>\n",
+       "\t<li>'0.00'</li>\n",
+       "\t<li>'0.00'</li>\n",
+       "\t<li>'0.00'</li>\n",
+       "\t<li>'0.03'</li>\n",
+       "\t<li>'0.05'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item '0.06'\n",
+       "\\item '1.05'\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item '10.50'\n",
+       "\\item '10.80'\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item NA\n",
+       "\\item '0.54'\n",
+       "\\item '0.03'\n",
+       "\\item '0.00'\n",
+       "\\item '0.00'\n",
+       "\\item '0.00'\n",
+       "\\item '0.03'\n",
+       "\\item '0.05'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. '0.06'\n",
+       "2. '1.05'\n",
+       "3. NA\n",
+       "4. NA\n",
+       "5. NA\n",
+       "6. NA\n",
+       "7. NA\n",
+       "8. NA\n",
+       "9. '10.50'\n",
+       "10. '10.80'\n",
+       "11. NA\n",
+       "12. NA\n",
+       "13. NA\n",
+       "14. NA\n",
+       "15. NA\n",
+       "16. '0.54'\n",
+       "17. '0.03'\n",
+       "18. '0.00'\n",
+       "19. '0.00'\n",
+       "20. '0.00'\n",
+       "21. '0.03'\n",
+       "22. '0.05'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"0.06\"  \"1.05\"  NA      NA      NA      NA      NA      NA      \"10.50\"\n",
+       "[10] \"10.80\" NA      NA      NA      NA      NA      \"0.54\"  \"0.03\"  \"0.00\" \n",
+       "[19] \"0.00\"  \"0.00\"  \"0.03\"  \"0.05\" "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "NiskinDat[NiskinDat$Date == as.POSIXct(\"1998-03-12\"),]$NO3_NO2"
    ]
   },
   {
